--- a/app/src/main/res/layout/activity_foodcart.xml
+++ b/app/src/main/res/layout/activity_foodcart.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#A6D1D0"
-    tools:context=".activity.FoodCatActivity">
+    tools:context=".FoodCartActivity">
 
     <ScrollView
         android:layout_width="match_parent"
