--- a/app/src/main/res/layout/activity_showdetail.xml
+++ b/app/src/main/res/layout/activity_showdetail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ShowDetailActivity">
+    tools:context=".ShowDetailActivity">
 
     <ScrollView
         android:id="@+id/scrollView3"
